--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.NewsApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.categorynews.CategoryNewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.categorynews.CategoryDisplayActivity"
+            android:exported="false"
+            android:theme="@style/Theme.NewsApp" />
+        <activity
             android:name=".ui.topheadlinepagination.TopHeadlinePaginationActivity"
             android:exported="true" />
         <activity
