--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.NewsApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.countrynews.CountryNewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.countrynews.CountryDisplayActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.categorynews.CategoryNewsActivity"
             android:exported="false" />
         <activity
