--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.NewsApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.offlineTopHeadlines.OfflineTopHeadlinesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.languageNews.LanguageDisplayActivity"
             android:exported="false" />
         <activity
